plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.0'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.app'
version = '0.0.1-SNAPSHOT'
description = 'WooriDoori-BE'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
}

dependencyManagement {
    imports {
        mavenBom 'org.springframework.ai:spring-ai-bom:1.0.0-M4'
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    //webflux
    implementation ("org.springframework.boot:spring-boot-starter-webflux")
	implementation ("io.projectreactor.netty:reactor-netty-http:1.1.17")

    //spring - ai
    implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
    implementation 'org.springframework.ai:spring-ai-chroma-store-spring-boot-starter'
    implementation 'org.springframework.ai:spring-ai-ollama-spring-boot-starter'

    // env
    implementation 'io.github.cdimascio:dotenv-java:3.0.0'

    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    // Prometheus 메트릭 수집용
    implementation 'io.micrometer:micrometer-registry-prometheus'
    
    // Spring Batch
    implementation 'org.springframework.boot:spring-boot-starter-batch'

    // Swagger/OpenAPI (SpringDoc)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

    // aws s3
    implementation 'software.amazon.awssdk:s3:2.20.47'
    implementation 'software.amazon.awssdk:auth:2.20.47'
    implementation 'software.amazon.awssdk:core:2.20.47'

    // security
    implementation 'org.springframework.security:spring-security-config'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'

    // QueryDSL
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
    
    // JWT
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.12.3'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.3'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.12.3'
    
    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    
    // Database
    runtimeOnly 'com.mysql:mysql-connector-j'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // (선택) 캐시 기능 활성화용
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    
    // Spring AI - OpenAI (필요시 주석 해제)
    // implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter:1.0.0-M4'
    
    // Development
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    
    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

// QueryDSL generated sources configuration
def querydslDir = "$buildDir/generated/sources/annotationProcessor/java/main"

sourceSets {
    main.java.srcDir querydslDir
}

tasks.withType(JavaCompile).configureEach {
    options.annotationProcessorGeneratedSourcesDirectory = file(querydslDir)
}

tasks.named('test') {
    useJUnitPlatform()
}

// Clean task for QueryDSL
clean {
    delete file(querydslDir)
}
